--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,6 @@ html, body {
 header  {
   position: absolute;
   padding: 20px;
-  height: 100%;
   width: 25%;
   display: block;
 }
@@ -22,9 +21,11 @@ a {
 }
 
 .top-fix {
-  padding-top: 50px;
+  padding-top: 20px;
   box-shadow: 0 2px 2px -2px rgba(0,0,0,0.1);
   transition: all ease 0.5s;
+  background-color: white;
+  z-index: 1;
 }
 
 label {
