--- a/views/partials/list.jade
+++ b/views/partials/list.jade
@@ -1,13 +1,13 @@
 div(ng-hide='loadedApps')
   p Loading...
 
-div(style='position: fixed; top: 0px; padding: 5px 0; background-color: white; z-index: 1; box-shadow: 0px 2px 4px -3px rgba(255,0,0,0.5); width: 70%; text-align: center;') Results: {{dbSize}}
+div(style='position: fixed; bottom: 0px; left: 0px; padding: 5px 0; background-color: white; z-index: 2; box-shadow: 0px -2px 4px -3px rgba(255,0,0,0.5); width: 100%; text-align: center;', ng-show='loadedApps') Results: {{dbSize}}
 
 div(ng-repeat='app in (apps | filter:include:filterInclude)')
   //name, year, major, industries, technical, design, business, engineering, linkedin, email, minorAndCerts, international, needsVisa
-  .col-sm-12
+  .col-sm-12.col-xs-12
     h3.name {{toUpperCase(app.name)}}
-  .col-sm-12
+  .col-sm-12.col-xs-6
     .col-sm-4
       h4 Year
       p.year {{app.year}}
@@ -17,7 +17,7 @@ div(ng-repeat='app in (apps | filter:include:filterInclude)')
     .col-sm-4
       h4 Minor / Certificates
       p.minor {{!! app.minorAndCerts.toString() ? app.minorAndCerts.join(', ') : "None"}}
-  .col-sm-12
+  .col-sm-12.col-xs-6
     .col-sm-4(ng-show='{{!! app.technical.toString()}}')
       h4 Technical Skills
       p.technical {{app.technical.join(', ')}}
@@ -27,19 +27,19 @@ div(ng-repeat='app in (apps | filter:include:filterInclude)')
     .col-sm-4(ng-show='{{!! app.business.toString()}}')
       h4 Business Skills
       p.business {{app.business.join(', ')}}
-  .col-sm-12
+  .col-sm-12.col-xs-12
     p.international 
       strong International student? 
       {{app.international}}
     p.needsVisa 
       strong Requires Visa Sponsorship upon graduation? 
       {{app.needsVisa}}
-  .col-sm-12
+  .col-sm-12.col-xs-12
     p
       a(ng-show='{{!!app.linkedin}}', href='{{app.linkedin}}', target='_blank') LinkedIn Profile
         &nbsp;&nbsp;&#124;&nbsp;&nbsp;
       a(href='mailto:{{app.email}}') {{app.email}}
 
-.buttons(ng-show='loadedApps')
+.buttons(ng-show='loadedApps', style='margin: 20px 0 30px 0').col-xs-12
   button.btn.btn-primary(ng-click='nextPage()', ng-disabled='apps.length >= dbSize') Load More!
-  button.btn.btn-warning(ng-click='loadAll()', ng-disabled='apps.length >= dbSize') Load All (might take some time)
+  button.btn.btn-warning.pull-right(ng-click='loadAll()', ng-disabled='apps.length >= dbSize') Load All (might take some time)
