--- a/views/partials/list.jade
+++ b/views/partials/list.jade
@@ -36,7 +36,7 @@ div(ng-repeat='app in (apps | filter:include:filterInclude)')
       {{app.needsVisa}}
   .col-sm-12.col-xs-12
     p
-      a(ng-show='{{!!app.linkedin}}', href='{{app.linkedin}}', target='_blank') LinkedIn Profile
+      a(ng-show='{{!!app.linkedin}}', href='//{{app.linkedin}}', target='_blank') LinkedIn Profile
         &nbsp;&nbsp;&#124;&nbsp;&nbsp;
       a(href='mailto:{{app.email}}') {{app.email}}
 
