--- a/views/index.jade
+++ b/views/index.jade
@@ -1,43 +1,24 @@
-doctype 5
-html(ng-app='EPIC-talent-portal')
+doctype html
+html(lang='en', ng-app='EPIC-talent-portal')
   head
-    title= title
+    title EPIC Talent Portal
     
     link(rel='stylesheet', href='/css/style.css')
-    link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.min.css');
-    script(src='/components/angular/angular.js');
-    script(src='/components/angular-bootstrap/ui-bootstrap-tpls.js');
-    script(src='/components/angular-route/angular-route.js');
-    script(src='/components/jquery/dist/jquery.min.js');
+    link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.min.css')
+    script(src='/components/angular/angular.js')
+    script(src='/components/angular-bootstrap/ui-bootstrap-tpls.js')
+    script(src='/components/angular-route/angular-route.js')
+    script(src='/components/jquery/dist/jquery.min.js')
+    script(type="text/javascript", src="//api.filepicker.io/v1/filepicker.js")
     script(src='/js/angular/EPIC-talent-portal.js')
     
   body
-  
-    header.col-xs-12.col-sm-3
-      img.logo(src='/img/EPIC-Logo-Primary-nosub.png')
-      h2.text-center Startup Career Fair
-      hr
-      h2.text-center Talent Portal
-      .top-fix
-        .form-group(ng-init='search = {}')
-          label.control-label(for='nameFilter') Name
-          input.form-control(ng-model='search.name', type='text', placeholder='filter...', id='nameFilter')
-          br
-          label.control-label(for='majorFilter') Major
-          input.form-group.form-control(ng-model='search.major', type='text', placeholder='filter...', id='majorFilter')
-          br
-          label.control-label(for='minorFilter') Minor
-          input.form-group.form-control(ng-model='search.minorAndCerts', type='text', placeholder='filter...', id='minorFilter')
-          br
-          input(ng-model='include.international', type='checkbox', checked, id='internationalFilter')
-          label.control-label(for='internationalFilter') &nbsp;Exclude international students?
-          br
-          input(ng-model='include.needsVisa', type='checkbox', checked, id='visaFilter')
-          label.control-label(for='visaFilter') &nbsp;Exclude students requiring visa sponsorship?
-    
-    .main.col-xs-12.col-sm-9
+
+    if(req)
+      ng-view(ng-init='req = #{req};')
+    else
       ng-view
-      
+ 
     script.
       var filters = $('.top-fix');
       var cacheWidth = $('header').width();
@@ -50,16 +31,18 @@ html(ng-app='EPIC-talent-portal')
         if ((reverse && pos <= off) || (!reverse && pos >= off)) f();
       }
       
-      $(window).scroll(function(e) {
-        atElement(filters, function() {
-          filters.css({position:'fixed', top:'0', width: cacheWidth});
+      if(!!filters[0]) {
+        $(window).scroll(function(e) {
+          atElement(filters, function() {
+            filters.css({position:'fixed', top:'0', width: cacheWidth});
+          });
+
+        $(window).resize(function(e) {
+          cacheWidth = $('header').width();
         });
-        
-      $(window).resize(function(e) {
-        cacheWidth = $('header').width();
-      });
-        atElement(subhead2, function() {
-          filters.removeAttr('style');
-        }, 'at bottom', 'in reverse');
-      });
+          atElement(subhead2, function() {
+            filters.removeAttr('style');
+          }, 'at bottom', 'in reverse');
+        });
+      }
       
