Better view resizing for list

--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -1,4 +1,4 @@
-header.col-xs-12.col-sm-3
+header.col-xs-12.col-sm-4.col-md-3
   img.logo(src='/img/EPIC-Logo-Primary-nosub.png')
   h2.text-center Startup Career Fair
   hr
