Large batch of important updates but I'm too lazy to commit things individually.

--- a/views/index.jade
+++ b/views/index.jade
@@ -18,6 +18,9 @@ html(lang='en', ng-app='EPIC-talent-portal')
 
     if(req)
       ng-view(ng-init='req = #{req};')
+    else if (err)
+      h1 Error
+      h2 #{err}
     else
       ng-view
 
